--- a/pages/19077.html
+++ b/pages/19077.html
@@ -308,16 +308,16 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>Any triple of distinct points in a projective line can be transformed by a <span class='newWikiWord'>projective transformation<a href='/nlab/new/projective+transformation'>?</a></span> (an element of <math class='maruku-mathml' display='inline' id='mathml_7afa950fdcd35341ef9654fa427a6cc472b027db_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>PGL</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>PGL(1)</annotation></semantics></math>) to another given triple of distinct points. Therefore no projective invariant can be attached to a triple of points and if three points are the starting parameters for some problem in projective geometry we may and typically do give them fixed values of <math class='maruku-mathml' display='inline' id='mathml_7afa950fdcd35341ef9654fa427a6cc472b027db_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn><mo>,</mo><mn>1</mn><mo>,</mo><mn>∞</mn></mrow><annotation encoding='application/x-tex'>0,1,\infty</annotation></semantics></math>.</p>
+    <p>Any triple of distinct points in a projective line over a field <math class='maruku-mathml' display='inline' id='mathml_dc9d07d21773223ad41f367bdb88f81c1014b65f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math> can be transformed by a <span class='newWikiWord'>projective transformation<a href='/nlab/new/projective+transformation'>?</a></span> (an element of <math class='maruku-mathml' display='inline' id='mathml_dc9d07d21773223ad41f367bdb88f81c1014b65f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>PGL</mi><mo stretchy='false'>(</mo><mn>2</mn><mo>,</mo><mi>K</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>PGL(2,K)</annotation></semantics></math>, in the case of <math class='maruku-mathml' display='inline' id='mathml_dc9d07d21773223ad41f367bdb88f81c1014b65f_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi><mo>=</mo><mstyle mathvariant='bold'><mi>C</mi></mstyle></mrow><annotation encoding='application/x-tex'>K = \mathbf{C}</annotation></semantics></math> known as a Möbius transformation) to another given triple of distinct points (the group <math class='maruku-mathml' display='inline' id='mathml_dc9d07d21773223ad41f367bdb88f81c1014b65f_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>PGL</mi><mo stretchy='false'>(</mo><mn>2</mn><mo>,</mo><mi>K</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>PGL(2,K)</annotation></semantics></math> is 3-transitive on the projective line). Therefore no projective invariant can be attached to a triple of points and if three points are the starting parameters for some problem in projective geometry we may and typically do give them fixed values of <math class='maruku-mathml' display='inline' id='mathml_dc9d07d21773223ad41f367bdb88f81c1014b65f_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn><mo>,</mo><mn>1</mn><mo>,</mo><mn>∞</mn></mrow><annotation encoding='application/x-tex'>0,1,\infty</annotation></semantics></math>.</p>
 
 <p>The simplest projective invariant can be attached to a quadruple of points and it is the cross ratio.</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_7afa950fdcd35341ef9654fa427a6cc472b027db_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>A</mi><mo>,</mo><mi>B</mi><mo>,</mo><mi>C</mi><mo>,</mo><mi>D</mi><mo stretchy='false'>)</mo><mo>=</mo><mfrac><mrow><mi>A</mi><mo>−</mo><mi>C</mi></mrow><mrow><mi>A</mi><mo>−</mo><mi>D</mi></mrow></mfrac><mfrac><mrow><mi>B</mi><mo>−</mo><mi>D</mi></mrow><mrow><mi>B</mi><mo>−</mo><mi>C</mi></mrow></mfrac></mrow><annotation encoding='application/x-tex'>
-(A,B,C,D) = \frac{A - C}{A - D}\frac{B - D}{B - C}
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_dc9d07d21773223ad41f367bdb88f81c1014b65f_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>A</mi><mo>,</mo><mi>B</mi><mo>,</mo><mi>C</mi><mo>,</mo><mi>D</mi><mo stretchy='false'>)</mo><mo>:</mo><mo>=</mo><mfrac><mrow><mi>A</mi><mo>−</mo><mi>C</mi></mrow><mrow><mi>A</mi><mo>−</mo><mi>D</mi></mrow></mfrac><mfrac><mrow><mi>B</mi><mo>−</mo><mi>D</mi></mrow><mrow><mi>B</mi><mo>−</mo><mi>C</mi></mrow></mfrac></mrow><annotation encoding='application/x-tex'>
+(A,B,C,D) := \frac{A - C}{A - D}\frac{B - D}{B - C}
 
 </annotation></semantics></math></div>
-<p>If the cross ratio for <math class='maruku-mathml' display='inline' id='mathml_7afa950fdcd35341ef9654fa427a6cc472b027db_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>A</mi><mo>,</mo><mi>B</mi><mo>,</mo><mi>C</mi><mo>,</mo><mi>D</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(A,B,C,D)</annotation></semantics></math> is <math class='maruku-mathml' display='inline' id='mathml_7afa950fdcd35341ef9654fa427a6cc472b027db_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi></mrow><annotation encoding='application/x-tex'>\lambda</annotation></semantics></math> and the order of the four points is changed than the cross ratio takes one of the following values, depending on the permutation:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_7afa950fdcd35341ef9654fa427a6cc472b027db_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi><mo>,</mo><mfrac><mn>1</mn><mi>λ</mi></mfrac><mo>,</mo><mn>1</mn><mo>−</mo><mi>λ</mi><mo>,</mo><mfrac><mrow><mi>λ</mi><mo>−</mo><mn>1</mn></mrow><mi>λ</mi></mfrac><mo>,</mo><mfrac><mn>1</mn><mrow><mn>1</mn><mo>−</mo><mi>λ</mi></mrow></mfrac><mo>,</mo><mfrac><mi>λ</mi><mrow><mi>λ</mi><mo>−</mo><mn>1</mn></mrow></mfrac></mrow><annotation encoding='application/x-tex'>
-\lambda, \frac{1}\lambda, 1-\lambda, \frac{\lambda - 1}\lambda, \frac{1}{1-\lambda}, \frac\lambda{\lambda-1}
+<p>If the cross ratio for <math class='maruku-mathml' display='inline' id='mathml_dc9d07d21773223ad41f367bdb88f81c1014b65f_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>A</mi><mo>,</mo><mi>B</mi><mo>,</mo><mi>C</mi><mo>,</mo><mi>D</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(A,B,C,D)</annotation></semantics></math> is <math class='maruku-mathml' display='inline' id='mathml_dc9d07d21773223ad41f367bdb88f81c1014b65f_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi></mrow><annotation encoding='application/x-tex'>\lambda</annotation></semantics></math> and the order of the four points is changed than the cross ratio takes one of the following values, depending on the permutation:</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_dc9d07d21773223ad41f367bdb88f81c1014b65f_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi><mo>,</mo><mfrac><mn>1</mn><mi>λ</mi></mfrac><mo>,</mo><mn>1</mn><mo>−</mo><mi>λ</mi><mo>,</mo><mfrac><mn>1</mn><mrow><mn>1</mn><mo>−</mo><mi>λ</mi></mrow></mfrac><mo>,</mo><mfrac><mrow><mi>λ</mi><mo>−</mo><mn>1</mn></mrow><mi>λ</mi></mfrac><mo>,</mo><mfrac><mi>λ</mi><mrow><mi>λ</mi><mo>−</mo><mn>1</mn></mrow></mfrac></mrow><annotation encoding='application/x-tex'>
+\lambda, \frac{1}\lambda, 1-\lambda, \frac{1}{1-\lambda}, \frac{\lambda - 1}\lambda, \frac\lambda{\lambda-1}
 
 </annotation></semantics></math></div>
 <p>An elementary introduction can be found in</p>
@@ -326,10 +326,12 @@ margin-left: 0em;
 <li>Lucienne Félix, The modern aspect of mathematics, (Rus. transl.: Элементарная математика в современном изложении, 1967)</li>
 </ul>
 
-<p>and a quick overview in</p>
+<p>and a quick overviews in</p>
 
 <ul>
 <li>F. Labourie, What is a Cross Ratio, Notices of the AMS, 55 (2008), no. 10, pp.1234–1235 <a href='https://www.math.u-psud.fr/~labourie/preprints/pdf/whatis.pdf'>pdf</a></li>
+
+<li>wikipedia <a href='https://en.wikipedia.org/wiki/Cross-ratio'>cross-ratio</a>, <a href='https://en.wikipedia.org/wiki/M%C3%B6bius_transformation'>Möbius transformation</a></li>
 </ul>
 
 <p>There is a noncommutative version</p>
@@ -342,7 +344,7 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on March 26, 2018 12:59:16 
+  Created on March 26, 2018 13:06:41 
   by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
   (193.198.162.14)
 </div>
