--- a/pages/10614.html
+++ b/pages/10614.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -330,6 +330,10 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/conic+section'>conic section</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cross+ratio'>cross ratio</a></p>
+</li>
 </ul>
 
 <h2 id='references'>References</h2>
@@ -345,14 +349,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January  3, 2015 21:49:59 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (127.0.0.1)
+  Revised on March 26, 2018 14:21:32 
+  by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
+  (193.198.162.14)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/projective+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/projective+geometry/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/projective+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/projective+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/projective+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/projective+geometry/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/projective+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/projective+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
