--- a/pages/7373.html
+++ b/pages/7373.html
@@ -322,7 +322,7 @@ margin-left: 0em;
 <li>Rosenberg’s reconstruction theorem (after Gabber), to appear in Expositiones Mathematicae, 2013 <a href='http://arxiv.org/abs/1310.5978'>-&gt;arXiv</a></li>
 </ul>
 
-<p><strong>Book</strong></p>
+<p><strong>Books</strong></p>
 
 <ul>
 <li><a href='http://www.springer.com/de/book/9783662535202'>Einführung in die Kategorientheorie: Mit ausführlichen Erklärungen und zahlreichen Beispielen</a>, Second edition, Springer, 2016.</li>
@@ -338,14 +338,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on June  3, 2017 16:35:12 
-  by <span class="newWikiWord">M.Brandenburg<a href="/nlab/new/M.Brandenburg">?</a></span>
-  (2003:e5:5bc3:5588:80ba:62b3:996c:70ed)
+  Revised on April  1, 2018 10:05:51 
+  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
+  (46.80.231.76)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Martin+Brandenburg" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Martin+Brandenburg/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Martin+Brandenburg" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Martin+Brandenburg" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Martin+Brandenburg" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Martin+Brandenburg/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Martin+Brandenburg" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Martin+Brandenburg" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
