--- a/pages/19091.html
+++ b/pages/19091.html
@@ -290,11 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> |
+    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
+    <a href="/nlab/authors" title="Who wrote what">Authors</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
     <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -308,19 +308,41 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><a href='https://plus.google.com/u/0/109950732766352929935'>G+ page</a></p>
-
-<h2 id='writings'>Writings</h2>
+    <p>Philip Gibbs is an independent thinker, working on physics and mathematics.</p>
 
 <ul>
-<li id='Gibbs11a'>
-<p><a class='existingWikiWord' href='/nlab/show/Philip+Gibbs'>Philip Gibbs</a>, <em>Seminar Watch (Higgs Special), Rumoured Higgs at 125 GeV and What Would a Higgs at 125 GeV Tell Us?</em>, Prespacetime Journal, December 2011, Vol. 2 Issue 12 pp. 1899-1905 (<a href='http://prespacetime.com/index.php/pst/article/view/308/298'>web</a>)</p>
+<li><a href='https://plus.google.com/u/0/109950732766352929935'>G+ page</a></li>
+</ul>
 
-<p>on the detection of the <a class='existingWikiWord' href='/nlab/show/Higgs+field'>Higgs field</a> at the <a class='existingWikiWord' href='/nlab/show/LHC'>LHC</a></p>
+<p>He is the founder of the <a href='http://vixra.org/'>viXra</a> preprint archive. For more on this see:</p>
+
+<ul>
+<li>
+<p>Philip Gibbs, <em><a href='https://www.quora.com/Are-there-any-serious-papers-on-viXra/answer/Philip-Gibbs-1'>Quora reply to: Are there any serious papers on viXra?</a></em></p>
+</li>
+
+<li>
+<p>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/ViXra'>ViXra</a></em></p>
 </li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_af9cf532b7d9c822dfeca6ad8d7af4c1abfdcec9_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='writings'>Writings</h2>
+
+<p>Gibbs seems to have been the first to publically discuss the detection of the <a class='existingWikiWord' href='/nlab/show/Higgs+field'>Higgs particle</a> at a <a class='existingWikiWord' href='/nlab/show/mass'>rest mass</a> of 125 <a class='existingWikiWord' href='/nlab/show/GeV'>GeV</a>, a little before the official announcement by the <a class='existingWikiWord' href='/nlab/show/LHC'>LHC</a> collaborations:</p>
+
+<ul>
+<li id='Gibbs11a'><a class='existingWikiWord' href='/nlab/show/Philip+Gibbs'>Philip Gibbs</a>, <em>Seminar Watch (Higgs Special), Rumoured Higgs at 125 GeV and What Would a Higgs at 125 GeV Tell Us?</em>, Prespacetime Journal, December 2011, Vol. 2 Issue 12 pp. 1899-1905 (<a href='http://prespacetime.com/index.php/pst/article/view/308/298'>web</a>)</li>
+</ul>
+
+<p>In this article Gibbs already highlights the near-criticality of the resulting Higgs <a class='existingWikiWord' href='/nlab/show/vacuum'>vacuum</a>, first published on his blog as</p>
+
+<ul>
+<li><em><a href='https://vixra.wordpress.com/2011/12/04/what-would-a-higgs-at-125-gev-tell-us/'>What would a Higgs at 125 GeV tell us?</a></em></li>
+</ul>
+
+<p>For more on this see at <em><a class='existingWikiWord' href='/nlab/show/Higgs+field'>Higgs field</a></em> the section <em><a href='Higgs+field#MassAndVacuumInstability'>Mass and vacuum stability</a></em>.</p>
+
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_a48725b20d8e93cdfcf0835d6ae33b2a94d7f054_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Higgs+field'>Higgs field</a></li>
@@ -330,19 +352,19 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on April  2, 2018 07:03:22 
+  Revised on April  3, 2018 03:52:35
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.90.187)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Philip+Gibbs" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/Philip+Gibbs" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Philip+Gibbs/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Philip+Gibbs" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Philip+Gibbs" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Philip+Gibbs" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Philip+Gibbs" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Philip+Gibbs" id="view_source" rel="nofollow">Source</a>
